--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "heattech"
+name = "toast"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 chrono = "0.4.43"
-clap = { version = "4", features = ["derive"] }
+clap = {version = "4", features = ["derive"]}
 color-print = "0.3"
 ratatui = "0.30"
