--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["trim-paths"]
+
 [package]
 name = "toast"
 version = "0.1.0"
@@ -8,3 +10,6 @@ chrono = "0.4.43"
 clap = {version = "4", features = ["derive"]}
 color-print = "0.3"
 ratatui = "0.30"
+
+[profile.release]
+trim-paths = "all"
